[package]
name = "pacbot"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json", "rustls-tls"] }
poise = "0.5.2"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = "1.0.159"
serde_json = "1.0.95"
dotenvy = "0.15.7"
sysinfo = "0.28.4"
human_bytes = "0.4.1"
compound_duration = "1.2.0"
jwt-simple = "0.11.4"
rand = "0.8.5"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
built = { version = "0.6.0", features = ["chrono"] }

[profile.release]
lto = true
strip = true
panic = "abort"

[build-dependencies]
built = { version = "0.6.0", features = ["git2", "chrono"] }
