[package]
name = "pacbot"
version = "0.1.0"
edition = "2021"
authores = ["Wizard28 <wiz28@pm.me>", "Elsie19 <hwengerstickel@protonmail.com>"]
description = "Pacstall's Discord server and GitHub bot"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pacstall/pacbot"

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.0", features = ["json", "rustls-tls"] }
poise = "0.5.5"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = "1.0.188"
serde_json = "1.0.107"
dotenvy = "0.15.7"
sysinfo = "0.29.5"
human_bytes = "0.4.2"
compound_duration = "1.2.1"
jwt-simple = "0.11.6"
rand = "0.8.5"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
built = { version = "0.6.1", features = ["chrono"] }

[profile.release]
lto = true
strip = true
panic = "abort"

[build-dependencies]
built = { version = "0.6.1", features = ["git2", "chrono"] }
