[tool.poetry]
name = "pacbot"
version = "0.1.0"
description = "Pacstall's discord bot"
authors = ["Sourajyoti Basak <wiz28@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0a10"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
pre-commit = "^2.17.0"
isort = "^5.10.1"
pyupgrade = "^2.31.1"
mypy = "^0.942"
codespell = "^2.1.0"
vulture = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
